--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="%PUBLIC_URL%/tictactoe.png" />
+    <link rel="icon" href="%PUBLIC_URL%/images/tictactoe.png" />
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&family=Short+Stack&family=Waiting+for+the+Sunrise&display=swap" rel="stylesheet">
     <meta name="description" content="Play the classic game TicTacToe"
     />
